Fix mobile template button / menu entry texts too small

--- a/src/Mapbender/MobileBundle/Resources/public/sass/theme/mobile.scss
+++ b/src/Mapbender/MobileBundle/Resources/public/sass/theme/mobile.scss
@@ -102,11 +102,7 @@
 
 /* ------------------------------------------------------------------ TOOLBAR */
 .toolBar {
-
-  .iconBig {
-    // Make big button icons even bigger (default is 160%)
-    font-size: 230%;
-  }
+  font-size: 19px;
 
   &.bottom {
     border-top: 3px solid $ciColor2;
